// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Discriminator Mapping should generate correct schema: discriminator-mapping 1`] = `
"schema @transport(subgraph: "test", kind: "rest") {
  query: Query
}

directive @discriminator(subgraph: String, field: String, mapping: [[String]]) on INTERFACE | UNION

directive @httpOperation(subgraph: String, path: String, operationSpecificHeaders: [[String]], httpMethod: HTTPMethod, isBinary: Boolean, requestBaseBody: ObjMap, queryParamArgMap: ObjMap, queryStringOptionsByParam: ObjMap, jsonApiFields: Boolean, queryStringOptions: ObjMap) on FIELD_DEFINITION

directive @transport(subgraph: String, kind: String, location: String, headers: [[String]], queryStringOptions: ObjMap, queryParams: [[String]]) repeatable on SCHEMA

type Query {
  pets_by_id(id: String!): Pet @httpOperation(subgraph: "test", path: "/pets/{args.id}", operationSpecificHeaders: [["accept", "application/json"]], httpMethod: GET)
}

union Pet @discriminator(subgraph: "test", field: "petType", mapping: [["Dog", "DogDifferent"], ["Cat", "Cat"]]) = Cat | DogDifferent

type Cat {
  petType: String
  cat_exclusive: String
}

type DogDifferent {
  petType: String
  dog_exclusive: String
}

enum HTTPMethod {
  GET
  HEAD
  POST
  PUT
  DELETE
  CONNECT
  OPTIONS
  TRACE
  PATCH
}

scalar ObjMap"
`;

exports[`Inline Discriminator Mapping (request body) should generate correct schema: discriminator-inline-request 1`] = `
"schema @transport(subgraph: "test", kind: "rest") {
  query: Query
  mutation: Mutation
}

directive @discriminator(subgraph: String, field: String, mapping: [[String]]) on INTERFACE | UNION

directive @httpOperation(subgraph: String, path: String, operationSpecificHeaders: [[String]], httpMethod: HTTPMethod, isBinary: Boolean, requestBaseBody: ObjMap, queryParamArgMap: ObjMap, queryStringOptionsByParam: ObjMap, jsonApiFields: Boolean, queryStringOptions: ObjMap) on FIELD_DEFINITION

directive @transport(subgraph: String, kind: String, location: String, headers: [[String]], queryStringOptions: ObjMap, queryParams: [[String]]) repeatable on SCHEMA

type Query {
  dummy: String
}

type Mutation {
  createThing(input: createThing_request_Input): Thing @httpOperation(subgraph: "test", path: "/things", operationSpecificHeaders: [["Content-Type", "application/json"], ["accept", "application/json"]], httpMethod: POST)
}

type Thing {
  id: String
  type: String
  name: String
}

input createThing_request_Input @oneOf(subgraph: "test") {
  CreateCatInput_Input: CreateCatInput_Input
  CreateDogInput_Input: CreateDogInput_Input
}

input CreateCatInput_Input {
  type: String!
  name: String!
  meow: String
}

input CreateDogInput_Input {
  type: String!
  name: String!
  bark: String
}

enum HTTPMethod {
  GET
  HEAD
  POST
  PUT
  DELETE
  CONNECT
  OPTIONS
  TRACE
  PATCH
}

scalar ObjMap"
`;

exports[`Inline Discriminator Mapping should generate correct schema: discriminator-inline 1`] = `
"schema @transport(subgraph: "test", kind: "rest") {
  query: Query
}

directive @discriminator(subgraph: String, field: String, mapping: [[String]]) on INTERFACE | UNION

directive @httpOperation(subgraph: String, path: String, operationSpecificHeaders: [[String]], httpMethod: HTTPMethod, isBinary: Boolean, requestBaseBody: ObjMap, queryParamArgMap: ObjMap, queryStringOptionsByParam: ObjMap, jsonApiFields: Boolean, queryStringOptions: ObjMap) on FIELD_DEFINITION

directive @transport(subgraph: String, kind: String, location: String, headers: [[String]], queryStringOptions: ObjMap, queryParams: [[String]]) repeatable on SCHEMA

type Query {
  things: [query_things_items] @httpOperation(subgraph: "test", path: "/things", operationSpecificHeaders: [["accept", "application/json"]], httpMethod: GET)
}

union query_things_items @discriminator(subgraph: "test", field: "type", mapping: [["cat", "Cat"], ["dog", "Dog"]]) = Cat | Dog

type Cat {
  id: String
  type: String
  name: String
  data: JSON
}

"""
The \`JSON\` scalar type represents JSON values as specified by [ECMA-404](http://www.ecma-international.org/publications/files/ECMA-ST/ECMA-404.pdf).
"""
scalar JSON @specifiedBy(url: "http://www.ecma-international.org/publications/files/ECMA-ST/ECMA-404.pdf")

type Dog {
  id: String
  type: String
  name: String
  data: JSON
}

enum HTTPMethod {
  GET
  HEAD
  POST
  PUT
  DELETE
  CONNECT
  OPTIONS
  TRACE
  PATCH
}

scalar ObjMap"
`;
